# novelvids

./: .env.example  .gitignore  Dockerfile  README.md  README_EN.md  docker-compose.yml  pyproject.toml
api/: __init__.py  novel.py  scene.py  video.py
controllers/: asset.py  chapter.py  config.py  novel.py  scene.py  video.py
frontend/: Dockerfile  index.html  nginx.conf  package-lock.json  package.json  tailwind.config.js
frontend/src/: App.vue
frontend/src/api/: auth.ts  chapter-processing.ts  chapters.ts  client.ts  dashboard.ts  index.ts  novels.ts  studio.ts
frontend/src/assets/: main.css
frontend/src/components/: ChapterEditModal.vue  LanguageSwitcher.vue
frontend/src/i18n/: index.ts
frontend/src/layouts/: ChapterLayout.vue
frontend/src/router/: index.ts
frontend/src/stores/: auth.ts  chapter-processing.ts  chapters.ts  index.ts  novels.ts  toast.ts
frontend/src/types/: chapter-processing.ts  index.ts  studio.ts
frontend/src/utils/: status.ts
frontend/src/views/: ChapterProcessingView.vue  DashboardView.vue  GenerateView.vue  HomeView.vue  LoginView.vue  NovelDetailView.vue  NovelsView.vue  RegisterView.vue  SettingsView.vue
models/: scene.py  video.py
novelvids/: __init__.py  cli.py  main.py
novelvids/api/: __init__.py  exceptions.py  handlers.py
novelvids/api/dependencies/: __init__.py
novelvids/api/middleware/: __init__.py
novelvids/api/v1/: __init__.py
novelvids/application/: __init__.py
novelvids/application/dto/: __init__.py  dashboard.py
novelvids/application/mappers/: __init__.py
novelvids/application/services/: __init__.py  chapter_processing.py
novelvids/application/tasks/: novel_processing.py
novelvids/core/: __init__.py
novelvids/core/config/: __init__.py  settings.py
novelvids/core/exceptions/: __init__.py
novelvids/core/security/: __init__.py
novelvids/domain/: __init__.py
novelvids/domain/entities/: __init__.py
novelvids/domain/events/: __init__.py
novelvids/domain/models/: character_asset.py  nlp.py
novelvids/domain/repositories/: __init__.py
novelvids/domain/services/: __init__.py  character_extraction.py  llm_client.py
novelvids/infrastructure/: __init__.py
novelvids/infrastructure/cache/: __init__.py
novelvids/infrastructure/comfyui/: __init__.py
novelvids/infrastructure/database/: __init__.py  config.py
novelvids/infrastructure/queue/: __init__.py  task_queue.py
novelvids/infrastructure/storage/: __init__.py
schemas/: scene.py  video.py
services/reference/: handler.py
services/storyboard/: generator.py  handler.py
services/video/: asset_resolver.py  seedance.py
test/: conftest.py
test/test_api/: test_asset_api.py  test_file_api.py  test_scene_api.py
test/test_controllers/: test_asset_controller.py  test_novel_controller.py  test_scene_controller.py
test/test_models/: test_model_str.py
web/: App.tsx  README.md  globals.css  index.html  index.tsx  metadata.json  package-lock.json  package.json  tailwind.config.ts  types.ts  vite.config.ts
web/components/: Layout.tsx
web/components/ui/: badge.tsx  button.tsx  card.tsx  dialog.tsx  input.tsx  label.tsx  select.tsx  (+2 more)
web/pages/: Config.tsx  Dashboard.tsx  NovelDetail.tsx  Videos.tsx
web/services/: api.ts
(+34 files in other folders)
